--- a/Packages/UIKit/package.json
+++ b/Packages/UIKit/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "com.cysharp.unitask": "2.5.5",
-    "com.ariosoren.di": "0.1.0"
+    "com.ariosoren.inject-kit": "0.1.0"
   },
   "repository": {
     "type": "local",
