[fix] fix asmdef for input system

--- a/Packages/InputControllerUtility/Scripts/Runtime/ArioSoren.InputControllerUtility.asmdef
+++ b/Packages/InputControllerUtility/Scripts/Runtime/ArioSoren.InputControllerUtility.asmdef
@@ -2,7 +2,8 @@
     "name": "ArioSoren.InputControllerUtility",
     "rootNamespace": "ArioSoren.InputControllerUtility",
     "references": [
-        "UniTask"
+        "UniTask",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
