--- a/Assets/ArioSoren/VirtualSoldierOps/Documentation/filterConfig.yml
+++ b/Assets/ArioSoren/VirtualSoldierOps/Documentation/filterConfig.yml
@@ -2,3 +2,9 @@ apiRules:
   - include:
       uidRegex: ArioSoren.VirtualSoldierOps
       type : Namespace
+  - include:
+      uidRegex: ^Global
+      type: Namespace
+  - exclude:
+      uidRegex: .*
+      type: Namespace
