[add] simple xr-origin sync

--- a/Assets/ArioSoren/VirtualSoldierOps/Scripts/Runtime/ArioSoren.VirtualSoldierOps.asmdef
+++ b/Assets/ArioSoren/VirtualSoldierOps/Scripts/Runtime/ArioSoren.VirtualSoldierOps.asmdef
@@ -9,7 +9,9 @@
         "ArioSoren.UIKit",
         "UniTask",
         "DOTween.Modules",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "FishNet.Runtime",
+        "Unity.XR.Interaction.Toolkit"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
